--- a/client/package.json
+++ b/client/package.json
@@ -54,6 +54,7 @@
     "r-dom": "2.2.3",
     "raw-loader": "0.5.1",
     "react": "15.3.1",
+    "react-addons-css-transition-group": "^15.3.1",
     "react-dom": "15.3.1",
     "react-on-rails": "6.0.5",
     "react-redux": "4.4.5",
